FMS Changelog
=============

Whenever you make additions/changes to the repo, please edit this file to give a breakdown of all changes each week.
Legend:
+ New
* Changed
! Fixed

v0.3 - Week 9 29/9

iOS App:
* Updated project to support iOS 9. Our app is now able to support devices using both 8 and 9.

v0.2 - Week 8 22/9
Server:
* Readings table has been split into two tables, "reading" and "sensor_reading". A reading has many sensor readings. When a "reading" is taken the buoy checks its sensors at the same time, so we can assume that the latitude, longitude and timestamp are all going to be the same for each "sensor_reading".

* All SQL queries related to readings have been updated to reflect the changes to the readings in the database.

! GET /api/warnings now properly returns all warnings for warning triggers that have been satisfied. The old implementation used to only check if a warning trigger was satisfied for ONE sensor from the most recent reading for each active buoy instance. This has been corrected so now warning triggers are checked against EVERY sensor in the most recent reading for each active buoy instance.

* GET /api/buoy_instances?active_true now also returns the last known location for a buoy instance. This will be used by the iOS app to display the buoys on the map.

iOS app:
+ Added 'Remember me' option to login screen for email/password.
+ Added settings screen plus a button to access it.
+ Added server address option to settings screen, specifying which server to connect to.
! Fixed issue where connecting to nonexistent server froze app.

Web app:
* Change font to Lato
* Change navbar colour to an aqua-blue
* Increase size of the map on the Dashboard
! Fix alignment issues on Filters on the Dashboard

v0.1 (MVP) - Week 7 15/9
+ Initial release