@@ -35,6 +35,8 @@
 
 @protocol DataModelDataDelegate <NSObject>
 
+- (void)didFailServerComms;
+
 - (void)didGetBuoyListFromServer:(NSArray *)buoys;
 
 @end
@@ -47,6 +49,8 @@
 
 - (void)connectToServerWithEmail:(NSString *)email andPass:(NSString *)password;
 - (void)updateBuoyListingFromServer;
+
+- (void)disconnect;
 
 // Static helper methods
 + (BOOL)NSStringIsValidEmail:(NSString *)s; // Returns whether the given string is a valid email
